crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-init_DOC301_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC301 `__init__` should not have a docstring
  --> DOC301_numpy.py:7:9
   |
 5 |       # DOC301
 6 |       def __init__(self, a: int, b: int) -> None:
 7 | /         """
 8 | |         Initialize class.
 9 | |
10 | |         Parameters
11 | |         ----------
12 | |         a : int
13 | |             Some integer.
14 | |         b : int
15 | |             Another integer.
16 | |         """
   | |___________^
17 |           self.a = a
18 |           self.b = b
   |
help: Please combine `__init__` docstring with the docstring of the class
