crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-missing-exception_DOC501_google.py_ignore_one_line.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC501 Raised exception `FasterThanLightError` missing from docstring
  --> DOC501_google.py:36:5
   |
34 |   # DOC501
35 |   def calculate_speed(distance: float, time: float) -> float:
36 | /     """Calculate speed as distance divided by time.
37 | |
38 | |     Args:
39 | |         distance: Distance traveled.
40 | |         time: Time spent traveling.
41 | |
42 | |     Returns:
43 | |         Speed as distance divided by time.
44 | |     """
   | |_______^
45 |       try:
46 |           return distance / time
   |
help: Add `FasterThanLightError` to the docstring

DOC501 Raised exception `ValueError` missing from docstring
  --> DOC501_google.py:53:5
   |
51 |   # DOC501
52 |   def calculate_speed(distance: float, time: float) -> float:
53 | /     """Calculate speed as distance divided by time.
54 | |
55 | |     Args:
56 | |         distance: Distance traveled.
57 | |         time: Time spent traveling.
58 | |
59 | |     Returns:
60 | |         Speed as distance divided by time.
61 | |     """
   | |_______^
62 |       try:
63 |           return distance / time
   |
help: Add `ValueError` to the docstring

DOC501 Raised exception `FasterThanLightError` missing from docstring
  --> DOC501_google.py:53:5
   |
51 |   # DOC501
52 |   def calculate_speed(distance: float, time: float) -> float:
53 | /     """Calculate speed as distance divided by time.
54 | |
55 | |     Args:
56 | |         distance: Distance traveled.
57 | |         time: Time spent traveling.
58 | |
59 | |     Returns:
60 | |         Speed as distance divided by time.
61 | |     """
   | |_______^
62 |       try:
63 |           return distance / time
   |
help: Add `FasterThanLightError` to the docstring

DOC501 Raised exception `ZeroDivisionError` missing from docstring
  --> DOC501_google.py:72:5
   |
70 |   # DOC501
71 |   def calculate_speed(distance: float, time: float) -> float:
72 | /     """Calculate speed as distance divided by time.
73 | |
74 | |     Args:
75 | |         distance: Distance traveled.
76 | |         time: Time spent traveling.
77 | |
78 | |     Returns:
79 | |         Speed as distance divided by time.
80 | |     """
   | |_______^
81 |       try:
82 |           return distance / time
   |
help: Add `ZeroDivisionError` to the docstring

DOC501 Raised exception `ValueError` missing from docstring
   --> DOC501_google.py:90:5
    |
 88 |   # DOC501
 89 |   def calculate_speed(distance: float, time: float) -> float:
 90 | /     """Calculate speed as distance divided by time.
 91 | |
 92 | |     Args:
 93 | |         distance: Distance traveled.
 94 | |         time: Time spent traveling.
 95 | |
 96 | |     Returns:
 97 | |         Speed as distance divided by time.
 98 | |     """
    | |_______^
 99 |       try:
100 |           return distance / time
    |
help: Add `ValueError` to the docstring

DOC501 Raised exception `ZeroDivisionError` missing from docstring
   --> DOC501_google.py:90:5
    |
 88 |   # DOC501
 89 |   def calculate_speed(distance: float, time: float) -> float:
 90 | /     """Calculate speed as distance divided by time.
 91 | |
 92 | |     Args:
 93 | |         distance: Distance traveled.
 94 | |         time: Time spent traveling.
 95 | |
 96 | |     Returns:
 97 | |         Speed as distance divided by time.
 98 | |     """
    | |_______^
 99 |       try:
100 |           return distance / time
    |
help: Add `ZeroDivisionError` to the docstring

DOC501 Raised exception `AnotherError` missing from docstring
   --> DOC501_google.py:108:5
    |
106 |   # DOC501
107 |   def calculate_speed(distance: float, time: float) -> float:
108 | /     """Calculate speed as distance divided by time.
109 | |
110 | |     Args:
111 | |         distance: Distance traveled.
112 | |         time: Time spent traveling.
113 | |
114 | |     Returns:
115 | |         Speed as distance divided by time.
116 | |     """
    | |_______^
117 |       raise AnotherError
    |
help: Add `AnotherError` to the docstring

DOC501 Raised exception `AnotherError` missing from docstring
   --> DOC501_google.py:122:5
    |
120 |   # DOC501
121 |   def calculate_speed(distance: float, time: float) -> float:
122 | /     """Calculate speed as distance divided by time.
123 | |
124 | |     Args:
125 | |         distance: Distance traveled.
126 | |         time: Time spent traveling.
127 | |
128 | |     Returns:
129 | |         Speed as distance divided by time.
130 | |     """
    | |_______^
131 |       raise AnotherError()
    |
help: Add `AnotherError` to the docstring

DOC501 Raised exception `SomeError` missing from docstring
   --> DOC501_google.py:136:5
    |
134 |   # DOC501
135 |   def foo(bar: int):
136 | /     """Foo.
137 | |
138 | |     Args:
139 | |         bar: Bar.
140 | |     """
    | |_______^
141 |       raise something.SomeError
    |
help: Add `SomeError` to the docstring

DOC501 Raised exception `ZeroDivisionError` missing from docstring
   --> DOC501_google.py:199:5
    |
197 |   # DOC501
198 |   def calculate_speed(distance: float, time: float) -> float:
199 | /     """Calculate speed as distance divided by time.
200 | |
201 | |     Args:
202 | |         distance: Distance traveled.
203 | |         time: Time spent traveling.
204 | |
205 | |     Returns:
206 | |         Speed as distance divided by time.
207 | |
208 | |     Raises:
209 | |         TypeError: if you didn't pass a number for both parameters
210 | |     """
    | |_______^
211 |       try:
212 |           return distance / time
    |
help: Add `ZeroDivisionError` to the docstring

DOC501 Raised exception `TypeError` missing from docstring
   --> DOC501_google.py:240:5
    |
239 |   def foo():
240 | /     """Foo.
241 | |
242 | |     Returns:
243 | |         42: int.
244 | |     """
    | |_______^
245 |       if True:
246 |           raise TypeError  # DOC501
    |
help: Add `TypeError` to the docstring

DOC501 Raised exception `ValueError` missing from docstring
   --> DOC501_google.py:240:5
    |
239 |   def foo():
240 | /     """Foo.
241 | |
242 | |     Returns:
243 | |         42: int.
244 | |     """
    | |_______^
245 |       if True:
246 |           raise TypeError  # DOC501
    |
help: Add `ValueError` to the docstring

DOC501 Raised exception `ValueError` missing from docstring
   --> DOC501_google.py:271:5
    |
269 |   # DOC501 - exception raised via classmethod, NOT documented
270 |   def validate_classmethod_missing(value):
271 | /     """Validate a value.
272 | |
273 | |     Args:
274 | |         value: the value to validate.
275 | |     """
    | |_______^
276 |       raise ValueError.from_exception_data(
277 |           title="Validation",
    |
help: Add `ValueError` to the docstring

DOC501 Raised exception `ValueError` missing from docstring
   --> DOC501_google.py:313:5
    |
311 |   # DOC501 - chained method call, NOT documented
312 |   def chained_missing(value):
313 | /     """Validate a value.
314 | |
315 | |     Args:
316 | |         value: the value to validate.
317 | |     """
    | |_______^
318 |       raise ValueError.from_exception_data(
319 |           title="Validation",
    |
help: Add `ValueError` to the docstring

DOC501 Raised exception `SomeError` missing from docstring
   --> DOC501_google.py:339:5
    |
337 |   # DOC501 - exception raised via module attribute call, NOT documented
338 |   def module_exception_missing(value):
339 | /     """Process a value.
340 | |
341 | |     Args:
342 | |         value: the value to process.
343 | |     """
    | |_______^
344 |       raise something.SomeError(value)
    |
help: Add `SomeError` to the docstring

DOC501 Raised exception `URLError` missing from docstring
   --> DOC501_google.py:362:5
    |
360 |   # DOC501 - exception raised via nested module attribute call, NOT documented
361 |   def nested_module_exception_missing(value):
362 | /     """Process a value.
363 | |
364 | |     Args:
365 | |         value: the value to process.
366 | |     """
    | |_______^
367 |       raise urllib.error.URLError(value)
    |
help: Add `URLError` to the docstring

DOC501 Raised exception `URLError` missing from docstring
   --> DOC501_google.py:385:5
    |
383 |   # DOC501 - exception raised via from-imported module, NOT documented
384 |   def from_import_module_missing(value):
385 | /     """Process a value.
386 | |
387 | |     Args:
388 | |         value: the value to process.
389 | |     """
    | |_______^
390 |       raise url_error.URLError(value)
    |
help: Add `URLError` to the docstring
