crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-missing-parameter_DOC101_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC101 Parameter `b` missing from the docstring
   --> DOC101_google.py:203:5
    |
201 |     Adds two numbers and returns the result.
202 |
203 |     Args:
    |     ^^^^
204 |         a (int): The first number to add.
    |
help: Add the missing parameter to the docstring

DOC101 Parameter `multiplier` missing from the docstring
   --> DOC101_google.py:217:5
    |
215 |     Multiplies each element in a list by a given multiplier.
216 |
217 |     Args:
    |     ^^^^
218 |         lst (list of int): A list of integers.
    |
help: Add the missing parameter to the docstring

DOC101 Parameter `numbers` missing from the docstring
   --> DOC101_google.py:228:5
    |
226 |   # DOC101
227 |   def find_max_value(numbers):
228 | /     """
229 | |     Finds the maximum value in a list of numbers.
230 | |
231 | |     Returns:
232 | |         int: The maximum value found in the list.
233 | |     """
    | |_______^
234 |       return max(numbers)
    |
help: Add the missing parameter to the docstring

DOC101 These parameters are missing from the docstring: `name`, `age`
   --> DOC101_google.py:242:5
    |
240 |     Creates a user profile with basic information.
241 |
242 |     Args:
    |     ^^^^
243 |         email (str): The user's email address.
244 |         location (str): The location of the user.
    |
help: Add the missing parameters to the docstring

DOC101 These parameters are missing from the docstring: `tax_rate`, `discount`
   --> DOC101_google.py:262:5
    |
260 |     Calculates the total price after applying tax and a discount.
261 |
262 |     Args:
    |     ^^^^
263 |         item_prices (list of float): A list of prices for each item.
    |
help: Add the missing parameters to the docstring

DOC101 These parameters are missing from the docstring: `cc_address`, `bcc_address`
   --> DOC101_google.py:279:5
    |
277 |     Sends an email to the specified recipients.
278 |
279 |     Args:
    |     ^^^^
280 |         subject (str): The subject of the email.
281 |         body (str): The content of the email.
    |
help: Add the missing parameters to the docstring

DOC101 Parameter `args` missing from the docstring
   --> DOC101_google.py:295:5
    |
293 |     Concatenates multiple strings with a specified separator.
294 |
295 |     Args:
    |     ^^^^
296 |         separator (str): The separator to use between strings.
    |
help: Add the missing parameter to the docstring

DOC101 These parameters are missing from the docstring: `items`, `details`
   --> DOC101_google.py:309:5
    |
307 |     Processes an order with a list of items and optional order details.
308 |
309 |     Args:
    |     ^^^^
310 |         order_id (int): The unique identifier for the order.
    |
help: Add the missing parameters to the docstring

DOC101 Parameter `value` missing from the docstring
   --> DOC101_google.py:329:9
    |
327 |       # DOC101
328 |       def __init__(self, value=0):
329 | /         """
330 | |         Initializes the calculator with an initial value.
331 | |
332 | |         Returns:
333 | |             None
334 | |         """
    | |___________^
335 |           self.value = value
    |
help: Add the missing parameter to the docstring

DOC101 Parameter `number2` missing from the docstring
   --> DOC101_google.py:342:9
    |
340 |         Adds a number to the current value.
341 |
342 |         Args:
    |         ^^^^
343 |             number (int or float): The number to add to the current value.
    |
help: Add the missing parameter to the docstring

DOC101 Parameter `value_str` missing from the docstring
   --> DOC101_google.py:354:9
    |
352 |       @classmethod
353 |       def from_string(cls, value_str):
354 | /         """
355 | |         Creates a Calculator instance from a string representation of a number.
356 | |
357 | |         Returns:
358 | |             Calculator: A new instance of Calculator initialized with the value from the string.
359 | |         """
    | |___________^
360 |           value = float(value_str)
361 |           return cls(value)
    |
help: Add the missing parameter to the docstring

DOC101 Parameter `number` missing from the docstring
   --> DOC101_google.py:366:9
    |
364 |       @staticmethod
365 |       def is_valid_number(number):
366 | /         """
367 | |         Checks if a given number is valid (int or float).
368 | |
369 | |         Returns:
370 | |             bool: True if the number is valid, False otherwise.
371 | |         """
    | |___________^
372 |           return isinstance(number, (int, float))
    |
help: Add the missing parameter to the docstring
