crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-missing-returns_DOC201_google.py_ignore_one_line.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC201 `return` is not documented in docstring
 --> DOC201_google.py:3:5
  |
3 | /     """
4 | |     Do something
5 | |
6 | |     Args:
7 | |         num (int): A number
8 | |     """
  | |_______^
  |
help: Add a "Returns" section to the docstring

DOC201 `return` is not documented in docstring
  --> DOC201_google.py:44:9
   |
44 | /         """
45 | |         Do something
46 | |
47 | |         Args:
48 | |             num (int): A number
49 | |         """
   | |___________^
   |
help: Add a "Returns" section to the docstring

DOC201 `return` is not documented in docstring
   --> DOC201_google.py:178:5
    |
178 | /     """A very helpful docstring.
179 | |
180 | |     Args:
181 | |         x (int): An integer.
182 | |     """
    | |_______^
    |
help: Add a "Returns" section to the docstring

DOC201 `return` is not documented in docstring
   --> DOC201_google.py:191:5
    |
191 | /     """A very helpful docstring.
192 | |
193 | |     Args:
194 | |         x (int): An integer.
195 | |     """
    | |_______^
    |
help: Add a "Returns" section to the docstring

DOC201 `return` is not documented in docstring
   --> DOC201_google.py:204:5
    |
204 | /     """A very helpful docstring.
205 | |
206 | |     Args:
207 | |         s (str): A string.
208 | |     """
    | |_______^
    |
help: Add a "Returns" section to the docstring
