crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-missing-yields_DOC402_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC402 `yield` is not documented in docstring
 --> DOC402_google.py:3:5
  |
3 | /     """
4 | |     Do something
5 | |
6 | |     Args:
7 | |         num (int): A number
8 | |     """
  | |_______^
  |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
  --> DOC402_google.py:44:9
   |
44 | /         """
45 | |         Do something
46 | |
47 | |         Args:
48 | |             num (int): A number
49 | |         """
   | |___________^
   |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
  --> DOC402_google.py:58:9
   |
58 |         """Do something nested."""
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
  --> DOC402_google.py:66:5
   |
66 |     """Do something."""
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
  --> DOC402_google.py:97:5
   |
97 | /     """
98 | |     Do something
99 | |     """
   | |_______^
   |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
   --> DOC402_google.py:105:5
    |
105 | /     """
106 | |     Do something
107 | |     """
    | |_______^
    |
help: Add a "Yields" section to the docstring
