crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-missing-yields_DOC402_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC402 `yield` is not documented in docstring
  --> DOC402_numpy.py:3:5
   |
 3 | /     """
 4 | |     Do something
 5 | |
 6 | |     Parameters
 7 | |     ----------
 8 | |     num : int
 9 | |         A number
10 | |     """
   | |_______^
   |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
  --> DOC402_numpy.py:54:9
   |
54 | /         """
55 | |         Do something
56 | |
57 | |         Parameters
58 | |         ----------
59 | |         num : int
60 | |             A number
61 | |         """
   | |___________^
   |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
  --> DOC402_numpy.py:86:5
   |
86 | /     """
87 | |     Do something
88 | |     """
   | |_______^
   |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
  --> DOC402_numpy.py:95:5
   |
95 | /     """
96 | |     Do something
97 | |     """
   | |_______^
   |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
   --> DOC402_numpy.py:119:5
    |
119 | /     """
120 | |     Do something
121 | |     """
    | |_______^
    |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
   --> DOC402_numpy.py:128:5
    |
128 | /     """
129 | |     Do something
130 | |     """
    | |_______^
    |
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
   --> DOC402_numpy.py:137:5
    |
137 | /     """
138 | |     Do something
139 | |     """
    | |_______^
    |
help: Add a "Yields" section to the docstring
